--- a/starter-code/views/index.hbs
+++ b/starter-code/views/index.hbs
@@ -1,2 +1,5 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+<a href="/celebs">View Celebrities</a>
+<a href="/celebs-add">Add a Celebrity</a>
